--- a/mini/miniprogram/pages/home/home.wxss
+++ b/mini/miniprogram/pages/home/home.wxss
@@ -3,3 +3,11 @@
     width: 100%;
     height: 100%;
 }
+
+.playlist-wrap{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin-top: 10rpx;
+    flex-direction: row;
+}
