feat:使用observers监听器完成对属性的监听

--- a/mini/miniprogram/components/playlist/playlist.wxml
+++ b/mini/miniprogram/components/playlist/playlist.wxml
@@ -1,6 +1,6 @@
 <!--components/playlist/playlist.wxml-->
 <view class="playlist-container">
     <image class="playlist-img" src="{{cover.picUrl}}" />
-    <text class="playlist-playcount">{{cover.playCount}}</text>
+    <text class="playlist-playcount">{{_count}}</text>
     <view class="playlist-name">{{cover.name}}</view>
 </view>
