feat:音乐列表初始化

--- a/mini/miniprogram/components/playlist/playlist.wxml
+++ b/mini/miniprogram/components/playlist/playlist.wxml
@@ -1,5 +1,5 @@
 <!--components/playlist/playlist.wxml-->
-<view class="playlist-container">
+<view class="playlist-container" bind:tap="musicList">
     <image class="playlist-img" src="{{_url}}" mode="scaleToFill"/>
     <text class="playlist-playcount">{{_count}}</text>
     <view class="playlist-name">{{cover.rankname}}</view>
