feat:酷狗歌词接口请求(需写入cookie值)

--- a/mini/miniprogram/components/musicitem/musicitem.wxml
+++ b/mini/miniprogram/components/musicitem/musicitem.wxml
@@ -1,6 +1,6 @@
 <!--components/musicitem/musicitem.wxml-->
 <block wx:for="{{musiclist}}" wx:key="hash">
-    <view class="music-container {{item.hash === playingid ? 'playing' : ''}}" bind:tap="onSelect" data-musicid="{{item.hash}}">
+    <view class="music-container {{item.hash === playingid ? 'playing' : ''}}" bind:tap="onSelect" data-musicid="{{item.hash}}" data-index="{{index}}">
         <view class="music-index">{{index+1}}</view>
         <view class="music-info">
             <view class="music-name">
