--- a/mini/miniprogram/pages/player/player.wxml
+++ b/mini/miniprogram/pages/player/player.wxml
@@ -1,2 +1,9 @@
 <!--miniprogram/pages/player/player.wxml-->
-<text>miniprogram/pages/player/player.wxml</text>
+<view class="player-container" style="background:url({{detail.img}} center/cover no-repeat)"></view>
+<view class="player-mask"></view>
+<view class="player-info">
+    <view class="player-disc">
+        <image class="player-img" src="{{detail.img}}"/>
+    </view>
+</view>
+
