--- a/mini/miniprogram/pages/player/player.wxss
+++ b/mini/miniprogram/pages/player/player.wxss
@@ -1,1 +1,57 @@
 /* miniprogram/pages/player/player.wxss */
+.player-container{
+    position: absolute;
+    top:0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    filter: blur(40rpx);
+    opacity: 0.5;
+    z-index: -1;
+}
+.player-mask{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -2;
+    background-color: #222;
+}
+.player-info{
+    text-align: center;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+.player-disc{
+    width: 592rpx;
+    height: 592rpx;
+    background: url('https://s3.music.126.net/mobile-new/img/disc.png?d3bdd1080a72129346aa0b4b4964b75f=') no-repeat center/contain;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, 140rpx);
+}
+.player-disc::after{
+    content: '';
+    width: 192rpx;
+    height: 274rpx;
+    position: absolute;
+    top: -150rpx;
+    left: 266rpx;
+    background: url('https://s3.music.126.net/m/s/img/needle.png?702cf6d95f29e2e594f53a3caab50e12') no-repeat center/contain;
+    transform: rotate(-15deg);
+    transform-origin: 24rpx 10rpx;
+}
+.player-img{
+    width: 368rpx;
+    height: 368rpx;
+    border-radius: 50%;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    margin-top: -184rpx;
+    margin-left: -184rpx;
+}
