feat：小程序中使用字体图标

--- a/mini/miniprogram/pages/player/player.wxml
+++ b/mini/miniprogram/pages/player/player.wxml
@@ -6,4 +6,8 @@
         <image class="player-img" src="{{detail.img}}"/>
     </view>
 </view>
-
+<view class="control">
+    <text class="iconfont icon-shangyishou"></text>
+    <text class="iconfont icon-bofang_huaban"></text>
+    <text class="iconfont icon-xiayishou"></text>
+</view>
