--- a/mini/miniprogram/pages/player/player.wxml
+++ b/mini/miniprogram/pages/player/player.wxml
@@ -6,7 +6,7 @@
         <image class="player-img rotation {{isPlaying? '' :'rotation-paused'}}" src="{{detail.img}}"/>
     </view>
     <view class="progress-bar">
-        <m-progress></m-progress>
+        <m-progress bind:musicEnd="onNext"></m-progress>
     </view>
     <view class="control">
         <text bind:tap="onPrev" class="iconfont icon-shangyishou"></text>
