feat:完成歌词组件：歌词解析 && 样式

--- a/mini/miniprogram/components/progressbar/progressbar.wxml
+++ b/mini/miniprogram/components/progressbar/progressbar.wxml
@@ -9,4 +9,4 @@
         <progress stroke-width="4" background-color="#969696" active-color="#fff" percent="{{progress}}"/>
     </view>
     <text class="time">{{showTime.totalTime}}</text>
-</view>>
+</view>
