--- a/mini/miniprogram/pages/player/player.wxml
+++ b/mini/miniprogram/pages/player/player.wxml
@@ -2,9 +2,10 @@
 <view class="player-container" style="background:url({{detail.img}} center/cover no-repeat)"></view>
 <view class="player-mask"></view>
 <view class="player-info">
-    <view class="player-disc {{isPlaying ? 'play' : ''}}">
+    <view hidden="{{isLyricShow}}" class="player-disc {{isPlaying ? 'play' : ''}}" bind:tap="showLyric">
         <image class="player-img rotation {{isPlaying? '' :'rotation-paused'}}" src="{{detail.img}}"/>
     </view>
+    <m-lyric isLyricShow="{{!isLyricShow}}" bind:tap="showLyric" lyric="{{lyric}}"></m-lyric>
     <view class="progress-bar">
         <m-progress bind:musicEnd="onNext"></m-progress>
     </view>
