feat:完成歌词功能 && 歌词与音乐联动

--- a/mini/miniprogram/components/lyric/lyric.wxml
+++ b/mini/miniprogram/components/lyric/lyric.wxml
@@ -1,8 +1,8 @@
 <!--components/lyric/lyric.wxml-->
-<scroll-view hidden="{{isLyricShow}}" class="lyric-scroll">
+<scroll-view hidden="{{isLyricShow}}" class="lyric-scroll" scroll-with-animation="{{true}}" scroll-y="{{true}}" scroll-top="{{scrollTop}}">
     <view class="lyric-panel">
         <block wx:for="{{lrcList}}" wx:key="item">
-            <view class="lyric">{{item.lrc}}</view>
+            <view class="lyric {{index===nowLyricIndex ? 'hightlight-lyric' : ''}}">{{item.lrc}}</view>
         </block>
     </view>
 </scroll-view>
