--- a/mini/miniprogram/pages/player/player.wxml
+++ b/mini/miniprogram/pages/player/player.wxml
@@ -5,9 +5,9 @@
     <view hidden="{{isLyricShow}}" class="player-disc {{isPlaying ? 'play' : ''}}" bind:tap="showLyric">
         <image class="player-img rotation {{isPlaying? '' :'rotation-paused'}}" src="{{detail.img}}"/>
     </view>
-    <m-lyric isLyricShow="{{!isLyricShow}}" bind:tap="showLyric" lyric="{{lyric}}"></m-lyric>
+    <m-lyric class="lyric" isLyricShow="{{!isLyricShow}}" bind:tap="showLyric" lyric="{{lyric}}"></m-lyric>
     <view class="progress-bar">
-        <m-progress bind:musicEnd="onNext"></m-progress>
+        <m-progress bind:musicEnd="onNext" bind:timeUpdate="timeUpdate"></m-progress>
     </view>
     <view class="control">
         <text bind:tap="onPrev" class="iconfont icon-shangyishou"></text>
