--- a/mini/miniprogram/pages/find/find.wxss
+++ b/mini/miniprogram/pages/find/find.wxss
@@ -1,1 +1,27 @@
 /* miniprogram/pages/find/find.wxss */
+.header{
+    display: flex;
+    align-items: center;
+    padding: 0 20rpx;
+    background-color: #fff;
+    height: 100rpx;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 99;
+    box-sizing: border-box;
+}
+.header .icon-fabu{
+    font-size: 48rpx;
+}
+.publish-container{
+    width: 68rpx;
+    height: 68rpx;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.search-container{
+    flex: 1;
+}
