feat:完成发现页底部弹出层&&slot插槽引用

--- a/mini/miniprogram/pages/find/find.wxml
+++ b/mini/miniprogram/pages/find/find.wxml
@@ -8,4 +8,5 @@
             <m-search iconfont="iconfont" icon-sousuo="icon-sousuo"></m-search>
         </view>
     </view>
+    <m-bottom modalShow="{{modalShow}}"></m-bottom>
 </view>
