feat:完成授权组件封装及获取用户信息接口判断

--- a/mini/miniprogram/components/bottommodal/bottommodal.wxml
+++ b/mini/miniprogram/components/bottommodal/bottommodal.wxml
@@ -2,6 +2,6 @@
 <view class="modal" hidden="{{!modalShow}}">
     <view class="panel">
         <i class="iconfont icon-shanchu" bind:tap="onClose"></i>
-        <slot name=""></slot>
+        <slot name="modal-content"></slot>
     </view>
 </view>
