--- a/mini/miniprogram/pages/find/find.wxml
+++ b/mini/miniprogram/pages/find/find.wxml
@@ -8,5 +8,8 @@
             <m-search iconfont="iconfont" icon-sousuo="icon-sousuo"></m-search>
         </view>
     </view>
-    <m-bottom modalShow="{{modalShow}}"></m-bottom>
+    <m-login modalShow="{{modalShow}}"
+        bind:loginSuccess="onloginSuccess"
+        bind:loginFail="onloginFail"
+    ></m-login>
 </view>
