--- a/mini/miniprogram/pages/blog/blog.wxss
+++ b/mini/miniprogram/pages/blog/blog.wxss
@@ -1,1 +1,38 @@
 /* miniprogram/pages/blog/blog.wxss */
+.container{
+    padding: 20rpx;
+}
+.content{
+    width: 100%;
+    height: 360rpx;
+    box-sizing: border-box;
+}
+.footer{
+    display: flex;
+    align-items: center;
+    position: fixed;
+    bottom: 0;
+    padding: 20rpx;
+    width: 100%;
+    box-sizing: border-box;
+    background-color: #f1f1f1;
+}
+.words-num{
+    flex: 1;
+    text-align: right;
+    color: #474747;
+    font-size: 32rpx;
+    padding-right: 30rpx;
+}
+.send-btn{
+    background-color: #FF59D3;
+    color: #fff;
+    font-size: 24rpx;
+    margin-left: 20rpx !important;
+    height: 68rpx !important;
+    min-height: 68rpx !important;
+    line-height: 68rpx !important;
+    width: 164rpx !important;
+    padding: 0;
+}
+
