--- a/mini/miniprogram/pages/blog/blog.wxss
+++ b/mini/miniprogram/pages/blog/blog.wxss
@@ -36,3 +36,43 @@
     padding: 0;
 }
 
+.image-list{
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 20rpx;
+}
+.image-wrap{
+    width: 220rpx;
+    height: 220rpx;
+    margin-right: 10rpx;
+    margin-bottom: 10rpx;
+    position: relative;
+    overflow: hidden;
+    text-align: center;
+    border: 1px dotted #474747;
+}
+.image{
+    width: 100%;
+    height: 100%;
+}
+.icon-shanchu{
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 40rpx;
+    height: 40rpx;
+    background-color: #000;
+    opacity: .4;
+    color:#fff;
+    text-align: center;
+    line-height: 40rpx;
+    font-size: 38rpx;
+    font-weight: bolder;
+}
+.icon-jiahao{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+
