feat:云数据库模糊查询及增加索引管理

--- a/mini/miniprogram/pages/find/find.wxml
+++ b/mini/miniprogram/pages/find/find.wxml
@@ -5,7 +5,7 @@
             <i class="iconfont icon-fabu"></i>
         </view>
         <view class="search-container">
-            <m-search iconfont="iconfont" icon-sousuo="icon-sousuo"></m-search>
+            <m-search bind:search="onSearch" iconfont="iconfont" icon-sousuo="icon-sousuo"></m-search>
         </view>
     </view>
 
