--- a/mini/miniprogram/components/search/search.wxml
+++ b/mini/miniprogram/components/search/search.wxml
@@ -1,6 +1,6 @@
 <!--components/search/search.wxml-->
 <view class="container">
     <i class="iconfont icon-sousuo icon-sousuo-find"></i>
-    <input class="bar" placeholder="{{placeholder}}" placeholder-class="in-bar"></input>
-    <button class="search">搜索</button>
+    <input bindinput="onInput" class="bar" placeholder="{{placeholder}}" placeholder-class="in-bar"></input>
+    <button class="search" bind:tap="onSearch">搜索</button>
 </view>
