--- a/mini/miniprogram/components/bottommodal/bottommodal.wxss
+++ b/mini/miniprogram/components/bottommodal/bottommodal.wxss
@@ -14,7 +14,8 @@
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 300rpx;
+    min-height: 300rpx;
+    box-sizing: border-box;
     background-color: #f8f8f8;
 }
 .modal .icon-shanchu{
