feat:完成博客详情&&分享&&评论功能

--- a/mini/miniprogram/components/blogcoment/blogcoment.wxml
+++ b/mini/miniprogram/components/blogcoment/blogcoment.wxml
@@ -5,8 +5,10 @@
         <text>评论</text>
     </view>
     <view class="ctrl-item share">
-        <i class="iconfont icon-fenxiang icon"></i>
-        <text>分享</text>
+        <button open-type="share" data-blog="{{blog}}" class="share-btn" hover-class="share-hover">
+            <i class="iconfont icon-fenxiang icon"></i>
+            <text>分享</text>
+        </button>
     </view>
 </view>
 
@@ -15,9 +17,9 @@
     bind:loginFail="onloginFail"/>
 
 <m-modal modalShow="{{modalShow}}">
-    <view slot="modal-content">
-        <textarea name="content" bindinput="onInput" class="comment-content" placeholder="写评论"
+    <form slot="modal-content" report-submit="true" bind:submit="onSend">
+        <textarea name="content" class="comment-content" placeholder="写评论"
             value="{{content}}" fixed="{{true}}"></textarea>
-        <button class="send" bind:tap="onSend">发送</button>
-    </view>
+        <button class="send" form-type="submit">发送</button>
+    </form>
 </m-modal>
