--- a/mini/miniprogram/pages/find/find.wxml
+++ b/mini/miniprogram/pages/find/find.wxml
@@ -17,6 +17,7 @@
                     icon-pinglun="icon-pinglun"
                     icon-fenxiang="icon-fenxiang"
                     blogId="{{item._id}}"
+                    blog="{{item}}"
                 ></m-coment>
             </view>
         </block>
