feat:云调用生成小程序码

--- a/mini/miniprogram/pages/me/me.wxml
+++ b/mini/miniprogram/pages/me/me.wxml
@@ -22,7 +22,7 @@
         </navigator>
     </view>
     <view class="nav-item">
-        <view class="content">
+        <view class="content" bind:tap="qrcode">
             <i class="iconfont icon-ico icon-right"></i>
             <text class="text">小程序码</text>
             <i class="iconfont icon-xiangyou"></i>
