--- a/mini/miniprogram/pages/blessing/blessing.wxss
+++ b/mini/miniprogram/pages/blessing/blessing.wxss
@@ -79,3 +79,9 @@
       height: 60rpx;
       border-radius: 50%;
   }
+
+  .blessing-look{
+      margin: 20rpx;
+      color: #FF59D3;
+      text-decoration: initial;
+  }
