--- a/mini/miniprogram/pages/musiclist/musiclist.wxss
+++ b/mini/miniprogram/pages/musiclist/musiclist.wxss
@@ -14,8 +14,8 @@
     z-index: -1;
 }
 .detail-img{
-    width: 640rpx;
-    height: 240rpx;
+    width: 100%;
+    height: 100%;
     /* margin-right: 24rpx; */
     border-radius: 6rpx;
 }
@@ -27,7 +27,7 @@
     left: 0;
     width: 100%;
     height: 320rpx;
-    padding: 20rpx;
+    padding: 0;
     box-sizing: border-box;
     align-items: center;
     justify-content:center
