--- a/mini/miniprogram/pages/player/player.wxml
+++ b/mini/miniprogram/pages/player/player.wxml
@@ -1,6 +1,8 @@
 <!--miniprogram/pages/player/player.wxml-->
-<view class="player-container" style="background:url({{detail.img}} center/cover no-repeat)"></view>
-<view class="player-mask"></view>
+<view class="player-container"></view>
+<view class="player-mask">
+    <image class="player-mask-img" src="{{detail.img}}" />
+</view>
 <view class="player-info">
     <view hidden="{{isLyricShow}}" class="player-disc {{isPlaying ? 'play' : ''}}" bind:tap="showLyric">
         <image class="player-img rotation {{isPlaying? '' :'rotation-paused'}}" src="{{detail.img}}"/>
