feat:确定一致主题色

--- a/mini/miniprogram/components/blogcoment/blogcoment.wxss
+++ b/mini/miniprogram/components/blogcoment/blogcoment.wxss
@@ -30,7 +30,7 @@ textarea{
     font-size: 32rpx;
 }
 .send{
-    background-color: #FF59D3;
+    background-color: #FFA5C2;
     color: #fff;
     margin-right: 10rpx !important;
     font-size: 24rpx;
