--- a/mini/miniprogram/components/login/login.wxss
+++ b/mini/miniprogram/components/login/login.wxss
@@ -2,7 +2,7 @@
 .login{
     font-size: 32rpx;
     height: 80rpx;
-    background-color: #FF59D3;
+    background-color: #FFA5C2;
     color:#fff;
     margin: 110rpx;
 }
