--- a/mini/miniprogram/pages/find/find.wxml
+++ b/mini/miniprogram/pages/find/find.wxml
@@ -12,7 +12,10 @@
     <view class="blog-list">
         <block wx:for="{{blogList}}" wx:key="_id">
             <view class="blog-panel">
-                <m-card data-blogid="{{item._id}}" bind:tap="goComment" blog="{{item}}"></m-card>
+                <m-card data-blogid="{{item._id}}" bind:tap="goComment" blog="{{item}}"
+                     iconfont="iconfont"
+                     icon-location="icon-location"
+                    ></m-card>
                 <m-coment iconfont="iconfont"
                     icon-pinglun="icon-pinglun"
                     icon-fenxiang="icon-fenxiang"
