--- a/mini/miniprogram/components/blogcard/blogcard.wxml
+++ b/mini/miniprogram/components/blogcard/blogcard.wxml
@@ -13,4 +13,8 @@
             <image data-imgsrc="{{item}}" data-imgs="{{blog.img}}" catch:tap="onPreviewImg" class="img" src="{{item}}" mode="aspectFill"/>
         </block>
     </view>
+    <view class="blog-location" wx:if="{{blog.location && blog.location.name}}">
+         <i class="iconfont icon-location"></i>
+        {{blog.location.name}}
+    </view>
 </view>
