--- a/mini/miniprogram/pages/find/find.wxml
+++ b/mini/miniprogram/pages/find/find.wxml
@@ -24,6 +24,9 @@
                 ></m-coment>
             </view>
         </block>
+        <block wx:if="{{blogList.length === 0}}">
+            <view class="blog-empty">暂无动态</view>
+        </block>
     </view>
 
     <m-login modalShow="{{modalShow}}"
