feat:完善小程序

--- a/mini/miniprogram/pages/about/about.wxml
+++ b/mini/miniprogram/pages/about/about.wxml
@@ -12,7 +12,7 @@
         <view class="desc">简单的todo-list：音乐列表，音乐播放，动态发布，我的，有幸遇见你</view>
         <view class="subtitle">关于源码</view>
         <view class="desc">关于爱情小副手的源码可关注《前端美食汇》公众号后，回复“源码"来获取源码，每个功能点都可以参考commit记录来
-        开发属于你自己的小程序</view>
+        开发属于你自己的小程序，如果可以的话，也希望您点下广告，表示对我的支持，感谢。</view>
         <view class="subtitle">关联公众号</view>
         <view class="desc">项目关联了《前端美食汇》公众号，如果你也是一个程序开发者，可以关注公众号，虽然停更了一段时间，也打算
         重新抓起，更新有用的技术文章，做个有温度的公众号，可截图扫码关注公众号，亦可微信搜索《前端美食汇》。</view>
