feat：获取access_token

--- a/mini/miniprogram/pages/playhistory/playhistory.wxml
+++ b/mini/miniprogram/pages/playhistory/playhistory.wxml
@@ -1,5 +1,5 @@
 <!--miniprogram/pages/playhistory/playhistory.wxml-->
 <m-music musiclist="{{musiclist}}"></m-music>
 <block wx:if="{{musiclist.length === 0}}">
-    <view class="music-empty">暂无动态</view>
+    <view class="music-empty">暂无播放歌曲</view>
 </block>
